--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </aside>
 
         <section class="promotion-video">
-            <video autoplay muted>
+            <video autoplay >
                 <source src="./videos/Extreme_Laptop_Video.mp4" type="video/mp4">
                 <source src="./videos/Extreme_Laptop_Video.ogg" type="video/ogg">
                 Your browser does not support HTML5 video.
