--- a/contact.html
+++ b/contact.html
@@ -92,18 +92,21 @@
                 <h2>Most Attractive Products.</h2>
                 <ul class="contact-aside">
                     <li>
+                        <h3>Laptop-1</h3>
                         <a href="https://www.inholland.nl/" target="_blank">
                             <img src="./img/Student Dev Pro..jpg" alt="Student Dev Pro"
                                 title="Student Dev Pro">
                         </a>
                     </li>
                     <li>
+                        <h3>Laptop-2</h3>
                         <a href="https://www.inholland.nl/" target="_blank">
                             <img src="./img/Student Gamer PC.jpg" alt="Student Gamer PC"
                                 title="Student Gamer PC">
                         </a>
                     </li>
                     <li>
+                        <h3>Laptop-3</h3>
                         <a href="https://www.inholland.nl/" target="_blank">
                             <img src="./img/Student Basic.jpg" alt="Student Basic"
                                 title="Student Basic">
