--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <a href="" target="_blank">
                             <img src="./img/Student Dev Pro..jpg" alt="Student Dev Pro" title="Student Dev Pro">
                         </a>
-                        <figcaption>&reg; Lorem Insight &trade;</figcaption>
+                        <figcaption>&reg; JD It &trade;</figcaption>
                     </figure>
                 </article>
                 <article class="article-card">
@@ -132,7 +132,7 @@
                         <a href="" target="_blank">
                             <img src="./img/Student Gamer PC.jpg" alt="Student Gamer PC" title="Student Gamer PC">
                         </a>
-                        <figcaption>&reg; Lorem Insight &trade;</figcaption>
+                        <figcaption>&reg; JD It &trade;</figcaption>
                     </figure>
                 </article>
                 <article class="article-card">
@@ -158,7 +158,7 @@
                         <a href="" target="_blank">
                             <img src="./img/Student Basic.jpg" alt="Student Basic" title="Student Basic">
                         </a>
-                        <figcaption>&reg; Lorem Insight &trade;</figcaption>
+                        <figcaption>&reg; JD It &trade;</figcaption>
                     </figure>
                 </article>
             </section>
