--- a/pricing.html
+++ b/pricing.html
@@ -368,24 +368,27 @@
                         </tr>
                     </tbody>
                 </table>
-                <p class="source-data">Amazon &copy; 2023</p>
+                <p class="source-data">JD It &copy; 2023</p>
             </section>
             <aside class="price-page-aside">
                 <h2>Most Attractive Products.</h2>
                 <ul class="price-aside">
                     <li>
+                        <h3>Laptop-1</h3>
                         <a href="https://www.inholland.nl/" target="_blank">
                             <img src="./img/Student Dev Pro..jpg" alt="Student Dev Pro"
                                 title="Student Dev Pro">
                         </a>
                     </li>
                     <li>
+                        <h3>Laptop-2</h3>
                         <a href="https://www.inholland.nl/" target="_blank">
                             <img src="./img/Student Gamer PC.jpg" alt="Student Gamer PC"
                                 title="Student Gamer PC">
                         </a>
                     </li>
                     <li>
+                        <h3>Laptop-3</h3>
                         <a href="https://www.inholland.nl/" target="_blank">
                             <img src="./img/Student Basic.jpg" alt="Student Basic"
                                 title="Student Basic">
