--- a/product.html
+++ b/product.html
@@ -49,89 +49,97 @@
     <main class="product-page">
         <section class="product-articles">
             <article>
-                <h2>1 Lorem ipsum dolor sit amet consectetur.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ipsa nulla esse voluptates doloremque
-                    facere laboriosam vero, ratione, fugit tenetur et libero pariatur nemo recusandae, nesciunt quidem.
-                    Quod explicabo repellendus facere! Natus mollitia ipsam repudiandae tempore atque voluptatem
-                    explicabo autem harum molestiae voluptatibus fuga, voluptatum magni minima deserunt commodi deleniti
-                    officiis, quo molestias. Quisquam, cumque soluta! Sit vitae labore atque saepe quia architecto ipsa
-                    hic iusto provident! Et magni mollitia, hic voluptatum, magnam, perferendis debitis dignissimos
-                    incidunt iure harum quidem.</p>
+                <h2>Story about the product.</h2>
+                <p>The MacBook Air (M2, 2022) infuses the groundbreaking ultraportable Air design with the performance and battery-life 
+                   enhancements of Apple’s M2 chip, all in a super-slim aluminum chassis that weighs less than 3 pounds.
+                   The 13-inch Retina display looks great, the keyboard and trackpad are solid, and Touch ID offers seamless,
+                   convenient security for Apple’s most affordable Mac laptop.Apple’s M2 chip has plenty of things going for it,
+                   with ample performance for everyday use and even some media editing, but it does so while sipping power and 
+                   running silently—there are no noisy fans in the Air, and the performance is still top-notch. The M2 Air offers 
+                   great capabilities and decent battery life, making it the go-to choice for Apple fans and Windows refugees alike.
+                   If you’re an Apple die-hard, or even just ambivalent towards Windows, then the M2 Apple MacBook Air is the 
+                   general-use laptop we recommend. But it's not the cheapest Mac laptop; that would be the M1 version of the 
+                   MacBook Air, which starts at $999 and might be a better choice if you prioritize saving money over the additional
+                   benefits that the M2 provides.</p>
             </article>
             <article>
-                <h2> 2 Lorem ipsum dolor sit amet consectetur.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ipsa nulla esse voluptates doloremque
-                   autem harum molestiae voluptatibus fuga, voluptatum magni minima deserunt commodi deleniti
-                    officiis, quo molestias. Quisquam, cumque soluta! Sit vitae labore atque saepe quia architecto ipsa
-                    hic iusto provident! Et magni mollitia, hic voluptatum, magnam, perferendis debitis dignissimos
-                    incidunt iure harum quidem.</p>
+                <h2> Public expaction.</h2>
+                <p>The updated design is made of sturdy anodized aluminum, and the integrated kickstand is still an elegant solution to
+                   the problem of keeping a tablet upright. The new keyboard cover includes a storage and charging slot for the improved 
+                   pen, and Windows 11 includes features and pen interaction that’s second to none. Combine that with great performance
+                   and a battery that lasts more than 12 hours, and this is the paragon of modern Windows tablets.If you want a 2-in-1 
+                   tablet and don't mind spending extra for a keyboard cover and other accessories, this is it. It's simply the best,
+                   combining the iconic Windows tablet with smooth pen integration and an updated thin-bezel design.The average shopper 
+                   who wants a quick, portable, and low-fuss system doesn't need to look further. It's particularly friendly to those who
+                  can extend their budget beyond the low starting price for some of those fast and fancy upgrade options. 
+                  There are bigger-screen alternatives if that's your priority, but if you’re looking for a light portable laptop for 
+                     everyday home and office tasks.</p>
             </article>
             <article>
-                <h2> 3 Lorem ipsum dolor sit amet consectetur.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ipsa nulla esse voluptates doloremque
-                    facere laboriosam vero, ratione, fugit tenetur et libero pariatur nemo recusandae, nesciunt quidem.
-                    Quod explicabo repellendus facere! Natus mollitia ipsam repudiandae tempore atque voluptatem
-                    explicabo autem harum molestiae voluptatibus fuga, voluptatum magni minima deserunt commodi deleniti
-                    officiis, quo molestias. Quisquam, cumque soluta! Sit vitae labore atque saepe quia architecto ipsa
-                    hic iusto provident! Et magni mollitia, hic voluptatum, magnam, perferendis debitis dignissimos
-                    incidunt iure harum quidem.</p>
+                <h2> Future innovation.</h2>
+                <p>While the design isn't particularly exciting, Apple continues to lead the market with materials and build quality. 
+                    The iPhone 14 Pro Max features a stainless steel frame (as opposed to the standard iPhone 14's aluminum) and is
+                    protected with the company's own Ceramic Shield. Apple says its Shield is stronger than competing glass, but that's
+                    not something we can test in a practical manner.If you want a 2-in-1 tablet and don't mind spending extra for a
+                    keyboard cover and other accessories, this is it. It's simply the best, combining the iconic Windows tablet with 
+                    smooth pen integration and an updated thin-bezel design. A definitely very second advantage definitely specifically 
+                    is a latency of only 20 ms — which actually literally means for all intents and purposes definitely human eye: real-time</p>
             </article>
             <article>
-                <h2>4 Lorem ipsum dolor sit amet consectetur.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ipsa nulla esse voluptates doloremque
-                    facere laboriosam vero, ratione, fugit tenetur et libero pariatur nemo recusandae, nesciunt quidem.
-                    Quod explicabo repellendus facere! Natus mollitia ipsam repudiandae tempore atque voluptatem
-                    explicabo autem harum molestiae voluptatibus fuga, voluptatum magni minima deserunt commodi deleniti
-                    officiis, quo molestias. Quisquam, cumque soluta! Sit vitae labore atque saepe quia architecto ipsa
-                    hic iusto provident! Et magni mollitia, hic voluptatum, magnam, perferendis debitis dignissimos
-                    incidunt iure harum quidem.</p>
+                <h2>How it works.</h2>
+                <p>Moreover, the Pro Max outshines the standard iPhone 14 thanks to its more capable processor, always-on display, and Dynamic Island.
+                     With an upgraded main camera powered by a new Photonic Engine, and safety features such as Crash Detection and Emergency SOS via 
+                     satellite, Apple has delivered as fine a device as any on the market, earning the iPhone 14 Pro Max our Editors' Choice award.
+                     A high-resolution sensor with 5-axis IBIS and support for 4K60 video rounds out its feature set. Although its image sensor doesn't
+                     wow us like the high-end EOS R3, from which the R7 derives its autofocus acumen, nearly everything else about the camera does;
+                     it's the model to get if you've been waiting for a mirrorless update to the 7D Mark II.The EOS R7 sports all the hallmarks of an
+                     enthusiast camera, with a dust-and-moisture protected chassis that uses a mix of magnesium alloy and engineering-grade plastic. 
+                     You also get plenty of on-body controls, dual memory card slots, and a fast burst rate for action photography.
+                     </p>
             </article>
             <article>
-                <h2> 5Lorem ipsum dolor sit amet consectetur.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ipsa nulla esse voluptates doloremque
-                    facere laboriosam vero, ratione, fugit tenetur et libero pariatur nemo recusandae, nesciunt quidem.
-                    Quod explicabo repellendus facere! Natus mollitia ipsam repudiandae tempore atque voluptatem
-                    explicabo autem harum molestiae voluptatibus fuga, voluptatum magni minima deserunt commodi deleniti
-                    officiis, quo molestias. Quisquam, cumque soluta! Sit vitae labore atque saepe quia architecto ipsa
-                    hic iusto provident! Et magni mollitia, hic voluptatum, magnas facere! Natus mollitia ipsam repudiandae tempore atque voluptatem
-                    explicabo autem harum molestiae voluptatibus fuga, voluptatum magni minima deserunt commodi deleniti
-                    officiis, quo molestias. Quisquam, cumque soluta! Sit vitae labore atque saepe quia architecto ipsa
-                    hic iusto provident! Et magni mollitia, hic voluptatum, magnas facere! Natus mollitia ipsam repudiandae tempore atque voluptatem
-                    explicabo autem harum molestiae voluptatibus fuga, voluptatum magni minima deserunt commodi deleniti
-                    officiis, quo molestias. Quisquam, cumque soluta! Sit vitae labore atque saepe quia architecto ipsa
-                    hic iusto provident! Et magni mollitia, hic voluptatum, magnas facere! Natus mollitia ipsam repudiandae tempore atque voluptatem
-                    explicabo autem harum molestiae voluptatibus fuga, voluptatum magni minima deserunt commodi deleniti
-                    officiis, quo molestias. Quisquam, cumque soluta! Sit vitae labore atque saepe quia architecto ipsa
-                    hic iusto provident! Et magni mollitia, hic voluptatum, magnam, perferendis debitis dignissimos
-                    incidunt iure harum quidem.</p>
+                <h2> Future from this innovation.</h2>
+                <p>If you’re an Apple die-hard, or even just ambivalent towards Windows, then the M2 Apple MacBook Air is the general-use laptop we recommend.
+                     But it's not the cheapest Mac laptop; that would be the M1 version of the MacBook Air, which starts at $999 and might be a better choice
+                     if you prioritize saving money over the additional benefits that the M2 provides.While the design isn't particularly exciting, Apple
+                     continues to lead the market with materials and build quality. The iPhone 14 Pro Max features a stainless steel frame 
+                     (as opposed to the standard iPhone 14's aluminum) and is protected with the company's own Ceramic Shield. Apple says its
+                     Shield is stronger than competing glass, but that's not something we can test in a practical manner.If you want a 2-in-1 tablet and don't 
+                     mind spending extra for a keyboard cover and other accessories, this is it. It's simply the best, combining the iconic Windows tablet
+                     with smooth pen integration and an updated thin-bezel design.
+                    </p>
             </article>
             <article>
-                <h2> 6Lorem ipsum dolor sit amet consectetur.</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ipsa nulla esse voluptates doloremque
-                    facere laboriosam vero, ratione, fugit tenetur et libero pariatur nemo recusandae, nesciunt quidem.
-                    Quod explicabo repellendus facere! Natus mollitia ipsam repudiandae tempore atque voluptatem
-                    explicabo autem harum molestiae voluptatibus fuga, voluptatum magni minima deserunt commodi deleniti
-                    officiis, quo molestias. Quisquam, cumque soluta! Sit vitae labore atque saepe quia architecto ipsa
-                    hic iusto provident! Et magni mollitia, hic voluptatum, magnam, perferendis debitis dignissimos
-                    incidunt iure harum quidem.</p>
+                <h2> Expect from the service.</h2>
+                <p>Despite its name, the Galaxy S22 Ultra takes its design cues from the Galaxy Note lineup. Whereas devices in the Galaxy S series have softer curves,
+                   Galaxy Note models typically sport squared-off top and bottom edges with curved, waterfall sides.Canon's EOS R system started with full-frame models,
+                   but the company recently expanded into the APS-C space with the more consumer-friendly EOS R10 and R7. The smaller sensor supports lighter lenses—two 
+                   zoom lenses, the RF-S 18-45mm F4.5-6.3 IS STM and the RF-S 18-150mm F3.5-6.3 IS STM, launched alongside them.If your needs are relatively simple and your
+                   targeted spend is much closer to $500 than $1,000, you can’t beat what this laptop has to offer. True budget laptops usually include some sort of compromise, 
+                   so the best budget systems minimize them as much as possible, and the shortcomings here aren't dealbreakers. PC costs have risen steadily in the past couple years, 
+                   so if a bargain is your main concern and you just need a laptop for light everyday use cases, look no further.
+                </p>
             </article>
         </section>
         <aside class="aside-product">
-            <h2>Lorem ipsum dolor sit.</h2>
+            <h2>Most Attractive Products.</h2>
             <ul class="aside-products-box">
                 <li>
+                    <h3>Laptop-1</h3>
                     <a href="https://www.inholland.nl/" target="_blank">
                         <img src="./img/Student Dev Pro..jpg" alt="Student Dev Pro"
                             title="Student Dev Pro">
                     </a>
                 </li>
                 <li>
+                    <h3>Laptop-2</h3>
                     <a href="https://www.inholland.nl/" target="_blank">
                         <img src="./img/Student Gamer PC.jpg" alt="Student Gamer PC"
                             title="Student Gamer PC">
                     </a>
                 </li>
                 <li>
+                    <h3>Laptop-3</h3>
                     <a href="https://www.inholland.nl/" target="_blank">
                         <img src="./img/Student Basic.jpg" alt="Student Basic"
                             title="Student Basic">
