--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             experience gameplay as it is intended with smooth display movement.
                         </p>
                         <footer>
-                            <p>Price $1100</p>
+                            <p>Price £1100</p>
                             <a href="" target="_blank">Buy Now</a>
                         </footer>
                     </section>
@@ -149,7 +149,7 @@
                             and your operating environment.
                         </p>
                         <footer>
-                            <p>Price $500</p>
+                            <p>Price €500</p>
                             <a href="" target="_blank">Buy Now</a>
                         </footer>
                     </section>
